Hori scrollbar bug resolved

--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
     font-family: google-sans
 };
 html{
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 body{
     font-family: google-sans
